test/corpus/expressions.txt
================================================================================
Operator precedence: & binds tighter than |
================================================================================

MODULE main
  INVAR a & b | c

--------------------------------------------------------------------------------

(source_file
  (module
    name: (identifier)
    (invar_constraint
      (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier)))))

================================================================================
Implication is right associative
================================================================================

MODULE main
  INVAR a -> b -> c

--------------------------------------------------------------------------------

(source_file
  (module
    name: (identifier)
    (invar_constraint
      (binary_expression
        left: (identifier)
        right: (binary_expression
          left: (identifier)
          right: (identifier))))))

================================================================================
Case expression
================================================================================

MODULE main
  DEFINE x := case
    a : 1;
    TRUE : 2;
  esac;

--------------------------------------------------------------------------------

(source_file
  (module
    name: (identifier)
    (define_declaration
      (define_body
        name: (identifier)
        value: (case_expression
          (case_branch
            condition: (identifier)
            value: (integer_literal))
          (case_branch
            condition: (boolean_literal)
            value: (integer_literal)))))))

================================================================================
CTL until
================================================================================

MODULE main
  SPEC A [ p U q ]

--------------------------------------------------------------------------------

(source_file
  (module
    name: (identifier)
    (ctl_specification
      (ctl_bracket_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Bounded CTL until
================================================================================

MODULE main
  SPEC E [ p BU 1..5 q ]

--------------------------------------------------------------------------------

(source_file
  (module
    name: (identifier)
    (ctl_specification
      (ctl_bracket_expression
        left: (identifier)
        bound: (range_expression
          (integer_literal)
          (integer_literal))
        right: (identifier)))))

================================================================================
Nested temporal operators
================================================================================

MODULE main
  LTLSPEC G (p -> F q)

--------------------------------------------------------------------------------

(source_file
  (module
    name: (identifier)
    (ltl_specification
      (temporal_unary_expression
        operand: (parenthesized_expression
          (binary_expression
            left: (identifier)
            right: (temporal_unary_expression
              operand: (identifier))))))))

================================================================================
Dotted module member access
================================================================================

MODULE main
  SPEC AG !c.sub.ready

--------------------------------------------------------------------------------

(source_file
  (module
    name: (identifier)
    (ctl_specification
      (temporal_unary_expression
        operand: (unary_expression
          operand: (complex_identifier
            (identifier)
            field: (identifier)
            field: (identifier)))))))
